# NeuraPay

./: README.md  RUNNING.md
.claude/: settings.json
ai-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ai-service/app/agents/: banking_agent.py  base.py
ai-service/app/agents/specialists/: balance_agent.py  transactions_agent.py  transfer_agent.py
ai-service/app/api/v1/: router.py
ai-service/app/api/v1/endpoints/: health.py  operations.py  voice.py
ai-service/app/config/: __init__.py
ai-service/app/core/: config.py  error_handlers.py  exceptions.py  logging.py
ai-service/app/db/: base.py  constants.py  session.py
ai-service/app/db/models/: pending_action.py
ai-service/app/integrations/banking/: client.py
ai-service/app/mcp/: __init__.py
ai-service/app/memory/: __init__.py
ai-service/app/middleware/: request_id.py
ai-service/app/models/: __init__.py
ai-service/app/prompts/agents/: balance_agent.md  banking_agent.md  transactions_agent.md  transfer_agent.md
ai-service/app/prompts/core/: compliance.md  security.md
ai-service/app/prompts/workflows/: balance_check.md  pending_actions.md  transfer.md
ai-service/app/repositories/: pending_action.py
ai-service/app/schemas/: common.py  operations.py
ai-service/app/services/voice/: service.py
ai-service/app/services/voice/providers/: base.py  faster_whisper_provider.py  whisper.py
ai-service/app/tools/: __init__.py  balance_tools.py  pending_action_tools.py  transaction_tools.py  transfer_tools.py
ai-service/tests/: conftest.py
ai-service/tests/integration/api/: test_voice_endpoint.py
ai-service/tests/unit/services/: test_voice_service.py
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  nodemon.json  package-lock.json  package.json
backend/src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
backend/src/common/decorators/: current-user.decorator.ts
backend/src/common/guards/: account-status.guard.ts
backend/src/common/utils/: account-number.util.ts  pagination.util.ts
backend/src/db/config/: config.ts  data-source.ts
backend/src/db/migrations/: 1776342943970-initial-table-migrations.ts  1776351732703-indexed-walet-id-on-ledger-table.ts  1781732700986-added-account-number-column.ts
backend/src/db/seeds/: backfill-account-numbers.seed.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  (+1 more)
backend/test/: app.e2e-spec.ts
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: auth-shell.tsx  protected-route.tsx
frontend/src/hooks/: use-voice-recorder.ts
frontend/src/lib/: ai-api.ts  api.ts  format.ts
frontend/src/pages/: dashboard-page.tsx  login-page.tsx  register-page.tsx
frontend/src/providers/: auth-context.ts  auth-provider.tsx
frontend/src/types/: api.ts
(+27 files in other folders)
